kubernetes/jupyterlab-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab
  namespace: tfm
  labels:
    name: jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jupyterlab
  template:
    metadata:
      labels:
        name: jupyterlab
    spec:
      containers:
        - name: jupyterlab
          image: tonihurtado/pyspark-notebook:1.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8888
          volumeMounts:
            - name: jupyterlab-data
              mountPath: /home/jovyan/jupyter
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      restartPolicy: Always
      volumes:
      - name: jupyterlab-data
        persistentVolumeClaim:
          claimName: jupyterlab-pvc
