kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: tfm
  labels:
    name: mongodb
spec:
  selector:
    matchLabels:
      app: db
      name: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        name: mongodb    
    spec:
      containers:
      - name: mongo
        image: mongo:3.6             
        livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      restartPolicy: Always
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongo-pvc
