kubernetes/mongodb-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: tfm
spec:
  serviceName: mongodb-svc
  replicas: 3
  selector:
    matchLabels:
      app: db
      name: mongodb
  template:
    metadata:
      namespace: tfm
      labels:
        app: db
        name: mongodb
        replicaset: MainRepSet
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - "mongod"
            - "--bind_ip"
            - "0.0.0.0"
            - "--replSet"
            - "MainRepSet"
          resources:
            requests:
              cpu: 0.2
              memory: 200Mi
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage-claim
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-persistent-storage-claim
    spec:
      storageClassName: mongodb
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
