kubernetes/orion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: orion
  name: orion
  namespace: tfm
spec:
  replicas: 1
  selector:
    matchLabels:
      service: orion
  strategy: {}
  template:
    metadata:
      namespace: tfm
      labels:
        service: orion
    spec:
      containers:
        - args: ["-dbhost","mongodb-0.mongodb-svc.tfm.svc.cluster.local:27017,mongodb-1.mongodb-svc.tfm.svc.cluster.local:27017,mongodb-2.mongodb-svc.tfm.svc.cluster.local:27017","-rplSet","MainRepSet","-logLevel","DEBUG","-httpTimeout","15000","-dbDisableRetryWrites"] #"-dbuser","$(db_user)","-dbpwd","$(db_password)","-dbSSL","-dbAuthDb","admin",
          image: fiware/orion
          name: orion
          ports:
            - containerPort: 1026
          resources: {}
      restartPolicy: Always
status: {}
