kubernetes/draco-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tfm
  labels:
    service: draco  
  name: draco
spec:
  type: NodePort
  ports:
    - port: 5050
      targetPort: 5050
      name: data
    - port: 8080
      targetPort: 8080
      name: ui
  selector:
    app: draco
status:
  loadBalancer: {}
