kubernetes/jupyterlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  namespace: tfm
  labels:
    name: jupyterlab
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    name: jupyterlab
