kubernetes/mongodb-express.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: tfm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - name: mongo-express
          containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: tfm
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - name: mongo-express
      port: 8081
      protocol: TCP
      targetPort: 8081
      nodePort: 30000
