kubernetes/mongodb-ext-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-ext-svc
  namespace: tfm
spec:
  selector:
    app: db
    name: mongodb
  type: LoadBalancer
  ports:
    - name: mongodb-ext
      port: 27017
      protocol: TCP
      targetPort: 27017
      nodePort: 30001
