kubernetes/orion-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tfm
  labels:
    service: orion
  name: orion
spec:
  type: NodePort
  ports:
    - port: 1026
      targetPort: 1026
  selector:
    service: orion
status:
  loadBalancer: {}
